--- a/A2_Comp_Project/app/src/main/res/layout/fragment_blank.xml
+++ b/A2_Comp_Project/app/src/main/res/layout/fragment_blank.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.natha_000.a2_comp_project.BlankFragment">
+    tools:context="com.example.natha_000.a2_comp_project.SketchHistogram">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
