--- a/A2_Comp_Project/app/src/main/res/layout/content_main_stats.xml
+++ b/A2_Comp_Project/app/src/main/res/layout/content_main_stats.xml
@@ -4,142 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.natha_000.a2_comp_project.MainStatsActivity"
     tools:showIn="@layout/activity_main_stats">
 
-    <Button
-        android:layout_width="wrap_content"
+    <FrameLayout android:id="@+id/container1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Histogram"
-        android:id="@+id/button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/button2" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cumulative Frequency"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/button_array">
+    </FrameLayout>
 
     <LinearLayout
+        android:id="@+id/button_array"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="10"
-        android:id="@+id/linearLayout"
-        android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/button2">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Class Width"
-            android:id="@+id/a"
-            android:layout_weight="5"
-            android:gravity="center"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Frequency"
-            android:id="@+id/b"
-            android:layout_weight="3.5"
-            android:gravity="center"/>
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/button"
-        android:layout_below="@+id/linearLayout">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/button"
-        android:id="@+id/main_linear_layout">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tl1"
-            android:weightSum="10">
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:gravity="center">
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:ems="3"
-                    android:id="@+id/lb1"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentStart="true" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="&lt;x&lt;"
-                    android:id="@+id/textView6"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/lb1" />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:ems="3"
-                    android:id="@+id/ub1"
-                    android:layout_alignParentTop="true"
-                    android:layout_toEndOf="@+id/textView6" />
-            </RelativeLayout>
-
-            <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="4"
-                android:id="@+id/freq1"
-                android:layout_weight="3.5"
-                android:gravity="center"/>
-
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="X"
-                android:id="@+id/button3"
-                android:layout_weight="1.5"
-                android:background="@android:color/transparent"/>
-
-        </LinearLayout>
+        android:layout_alignParentBottom="true">
 
         <Button
-            android:layout_width="match_parent"
+            android:text="Table"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/New_Row"
-            android:id="@+id/button4"
-            android:onClick="Add_Row"/>
+            android:id="@+id/button9"
+            android:layout_weight="1"
+            android:onClick="dataTable"/>
+
+        <Button
+            android:text="Histogram"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button8"
+            android:layout_weight="1"
+            android:onClick="histogram"/>
+
+        <Button
+            android:text="Cumulative Frequency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button5"
+            android:layout_weight="1"
+            android:onClick="cumFreq"/>
     </LinearLayout>
-    </ScrollView>
+
 
 </RelativeLayout>
