--- a/A2_Comp_Project/app/src/main/res/layout/intemediary3d.xml
+++ b/A2_Comp_Project/app/src/main/res/layout/intemediary3d.xml
@@ -5,15 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.natha_000.a2_comp_project.MainStatsActivity">
+    tools:context="com.example.natha_000.a2_comp_project.Intemediary3D">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main_stats" />
+    <include layout="@layout/content_intemediary3_d" />
 
 </android.support.design.widget.CoordinatorLayout>
