--- a/A2_Comp_Project/app/src/main/res/layout/activity_tabbed_stats.xml
+++ b/A2_Comp_Project/app/src/main/res/layout/activity_tabbed_stats.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.natha_000.a2_comp_project.TabbedStatsActivity">
+    tools:context="com.example.natha_000.a2_comp_project.Graphing_Stats.TabbedStatsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
