--- a/A2_Comp_Project/app/src/main/res/layout/content_intemediary3_d.xml
+++ b/A2_Comp_Project/app/src/main/res/layout/content_intemediary3_d.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.natha_000.a2_comp_project.Intemediary3D"
+    tools:context="com.example.natha_000.a2_comp_project.Graphing_3D.Intemediary3D"
     tools:showIn="@layout/intemediary3d">
 
     <EditText
