--- a/A2_Comp_Project/app/src/main/res/layout/content_main.xml
+++ b/A2_Comp_Project/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.natha_000.a2_comp_project.MainActivity"
+    tools:context="com.example.natha_000.a2_comp_project.Main_Activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <Button
