--- a/A2_Comp_Project/app/src/main/res/layout/content_main_stats.xml
+++ b/A2_Comp_Project/app/src/main/res/layout/content_main_stats.xml
@@ -9,7 +9,7 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.natha_000.a2_comp_project.MainStatsActivity"
+    tools:context="com.example.natha_000.a2_comp_project.Graphing_Stats.MainStatsActivity"
     tools:showIn="@layout/activity_main_stats">
 
     <FrameLayout android:id="@+id/container1"
